restyled with bootstrap

--- a/src/Countdown.css
+++ b/src/Countdown.css
@@ -1,6 +1,6 @@
 .countdown {
   padding: 20px 20px 0 20px;
-  background: linear-gradient(#368af4, #3181f2);
+  background-color: #3e92ca;
   color: #fff;
   font-size: 1.8rem;
 }
