--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-.root,
-.app {
-  height: 100%;
-}
-
-.app {
-  background-color: #3181f2;
-  max-width: 50%;
-  margin: 0 auto;
+body {
+  padding-top: 15px; 
 }
